--- a/NLP_Final_Assignment.ipynb
+++ b/NLP_Final_Assignment.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Final Assignment - Introduction to NLP"
+    "# Amazon product feature extraction and sentiment analysis"
    ],
    "metadata": {
     "collapsed": false,
