--- a/NLP_Final_Assignment.ipynb
+++ b/NLP_Final_Assignment.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Amazon product feature extraction and sentiment analysis"
+    "# Amazon Product Feature Extraction and Sentiment Analysis"
    ],
    "metadata": {
     "collapsed": false,
